--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.14",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "ts-node": "^8.10.2",
